<resources>
    <string name="app_name">UniGo</string>
    <string name="more">بیشتر</string>
    <string name="profile">پروفایل</string>
    <string name="home">خانه</string>
    <string name="ranking">رتبه بندی</string>
    <string name="buy_coin">خرید سکه</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SabteNam">ثبت نام</string>
    <string name="vorod">ورود</string>
    <string name="PleaseTell">شماره تلفن همراه خود را وارد کنید</string>
    <string name="reqTell">شماره تلفن همراه</string>
    <string name="next">بعدی</string>
    <string name="choose_grade">پایه ی تحصیلی خود را انتخاب کنید</string>
    <string name="davazdahom">Senior High School \n \n دوازدهم</string>
    <string name="yazdahom">Senior High School \n \n یازدهم</string>
    <string name="dahom">Senior High School \n \n دهم</string>
    <string name="nohom">Senior High School \n \n نهم</string>
    <string name="hashtom">Senior High School \n \n هشتم</string>
    <string name="haftom">Senior High School \n \n هفتم</string>
    <string name="EnterMajor">رشته تحصیلی خود را انتخاب کنید</string>
    <string name="ensani">انسانی</string>
    <string name="riazi">ریاضی</string>
    <string name="tajrobi">تجربی</string>
    <string name="serch_name">جست و جوی اسم</string>
    <string name="random_raghib">رقیب تصادفی</string>
    <string name="robot">ربات</string>
    <string name="serch">جست و جو</string>
    <string name="select_your_lesson">درس خود را مقابل نام کاربری
        \n
        مشخص کنید
    </string>
    <string name="dars_jadid_price">۱۵</string>
    <string name="new_lessons">دروس جدید</string>
    <string name="lesson_one">درس اول</string>
    <string name="lesson_two">درس دوم</string>
    <string name="lesson_three">درس سوم</string>
    <string name="dont_like_lesson">ازین درس خوشت نمیاد ؟</string>
    <string name="select_chapter">فصل خود را مقابل نام کاربری\n مشخص کنید</string>
    <string name="chapter_one">فصل اول</string>
    <string name="chapter_two">فصل دوم</string>
    <string name="chapter_three">فصل سوم</string>
    <string name="dont_like_chapter">ازین فصل ها خوشت نمیاد ؟</string>
    <string name="other_chapter">فصل های دیگر</string>
    <string name="goft_goo">گفت و گو</string>
    <string name="was_easy">راحت بود</string>
    <string name="was_hard">سخت بود</string>
    <string name="lets_continue">ادامه بده</string>
    <string name="question_report">گزارش سوال</string>
    <string name="add_to_anbar">افزودن به انبار</string>
    <string name="your_turn">نوبت شما</string>
    <string name="opp_turn">نوبت حریف</string>
    <string name="chat">چت</string>
    <string name="game">بازی</string>

    <string-array name="cities">
        <item>تهران</item>
        <item>شیراز</item>
        <item>اصفهان</item>
    </string-array>


    <string-array name="sh_cities">
        <item>تهران</item>
        <item>دماوند</item>
        <item>فیروزکوه</item>
    </string-array>
    <string-array name="school_cities">
        <item>تهران</item>
        <item>دماوند</item>
        <item>فیروزکوه</item>
    </string-array>


</resources>
