<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.eaglet.unigo.Login.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3694f6"
        android:layout_weight="1">


            <TextView
                android:id="@+id/TV_TopMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UniGo"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">


            <TextView

                android:id="@+id/EnterPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/PleaseTell"
                android:textSize="14sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/ET_EnterPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:hint="@string/reqTell" />

        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8">

        <Button
            android:id="@+id/BtnNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawable0"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
